src/process/build/log/idf_py_stderr_output_181934
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'app_main':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:212:13: error: size of array 'array' is too large
  212 |         int array [999999999999999];
      |             ^~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:212:13: warning: unused variable 'array' [-Wunused-variable]
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4739: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
